<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/filter_by_dates"
        android:title="Date"
        />
    <item
        android:id="@+id/filter_by_keywords"
        android:title="Description Keywords"
        />
    <item
        android:id="@+id/filter_by_make"
        android:title="Make"
        />
    <item
        android:id="@+id/filter_by_tags"
        android:title="Tags"
        />
</menu>