...
    android:id="@+id/base_state_options"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="12dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/select_items_button"
        android:layout_width="80dp"
        android:layout_height="36dp"
        android:text="@string/select"
        android:layout_marginStart="4dp"
        android:padding="0dp"
        android:textSize="16sp" />
...
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end"
        android:gravity="center_vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/filter_dropdown_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="36dp"
            android:layout_height="36dp"
            app:icon="@drawable/baseline_tune_24"
            app:iconSize="26dp"
            app:iconGravity="textEnd"
...
