...
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="Keywords"
            app:hintEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/keyword_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_keyword_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="0dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
...
