...
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end"
        android:gravity="center_vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action_delete"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="36dp"
            android:layout_height="36dp"
            app:icon="@drawable/baseline_delete_24"
            app:iconSize="26dp"
            app:iconGravity="textEnd"
            app:iconTint="@color/black"
            android:contentDescription="@string/delete_action_description"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action_tags"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="36dp"
            android:layout_height="36dp"
            app:iconGravity="textEnd"
            app:icon="@drawable/sell_24px"
            app:iconSize="26dp"
...
