...
        android:paddingVertical="8dp"
        android:elevation="4dp"
        android:background="@drawable/rounded_background">


        <CheckBox
            android:id="@+id/item_checkBox"
            android:layout_width="28dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="4dp"
            android:gravity="center"
            android:background="@color/offWhite"/>
...
