<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="New tag"
            app:hintEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tag_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_tag_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="0dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            app:icon="@drawable/baseline_add_24"
            app:iconSize="30dp"
            app:iconTint="@color/black" />
    </LinearLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_labels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleLine="false">
    </com.google.android.material.chip.ChipGroup>

</LinearLayout>
